--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "http-proxy-middleware": "^0.19.1",
     "materialize-css": "^1.0.0",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
